# Huffman-archiver

./: CMakeLists.txt  README.md
app/include/: mainwindow.h  presswindow.h
app/src/: mainwindow.cpp  mainwindow.ui  presswindow.cpp  presswindow.ui
